Fix Client VM build for x86_64 and AArch64

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 14
    • Affects Version/s: 12, 13, 14
    • Component/s: hotspot
    • 12
    • b26
    • generic
    • linux

      "make images" failed on x86_64 and AArch64 when building JDK with configure args "--with-jvm-variants=client".

      Error on X86_64:
      Error occurred during initialization of VM
      Cannot dump shared archive when UseCompressedOops or UseCompressedClassPointers is off.

      Another error on AArch64:
      error: 'NativeInstruction' has not been declared
      __ add(r20, r20, NativeInstruction::instruction_size);
      ^
      At global scope:
      cc1plus: error: unrecognized command line option '-Wno-cast-function-type' [-Werror]
      cc1plus: error: unrecognized command line option '-Wno-misleading-indentation' [-Werror]
      cc1plus: error: unrecognized command line option '-Wno-implicit-fallthrough' [-Werror]
      cc1plus: error: unrecognized command line option '-Wno-int-in-bool-context' [-Werror]
      cc1plus: all warnings being treated as errors

            Assignee:
            Pengfei Li
            Reporter:
            Pengfei Li
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: