8234791: Fix Client VM build for x86_64 and AArch64

Reviewed-by: adinn, aph, thartmann